Simple Chrome extension

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 React/dummy-backend/node_modules/
 test-main-frame/node_modules/
 test-main-frame/node_modules/
+simple-chrome-extension_bed/.eslintrc.cjs
+simple-chrome-extension_bed/.gitignore
+simple-chrome-extension_bed/.prettierrc.json
+simple-chrome-extension_bed/index.html
+simple-chrome-extension_bed/package-lock.json
+simple-chrome-extension_bed/package.json
+simple-chrome-extension_bed/README.md
+simple-chrome-extension_bed/tsconfig.json
+simple-chrome-extension_bed/tsconfig.node.json
+simple-chrome-extension_bed/vite.config.ts
+simple-chrome-extension_bed/public/icons8-kawaii-broccoli-32.png
+simple-chrome-extension_bed/public/icons8-kawaii-broccoli-48.png
+simple-chrome-extension_bed/public/manifest.json
+simple-chrome-extension_bed/public/vite.svg
+simple-chrome-extension_bed/src/App.css
+simple-chrome-extension_bed/src/App.tsx
+simple-chrome-extension_bed/src/index.css
+simple-chrome-extension_bed/src/main.tsx
+simple-chrome-extension_bed/src/vite-env.d.ts
+simple-chrome-extension_bed/src/assets/react.svg
+ExtLook/index.css
+ExtLook/index.html
+ExtLook/logo.svg
+ChromeExtensionOne/LocalReadMe.txt
